src/components/app/header/navbar2/navbar2.css
.navbar2__container {
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  background-color: #fbfbfb;
  padding: 1rem 0;
  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
  z-index: 500;
  transition: all 0.3s;
  transform: translateY(0);
}

.navbar2__container--hidden {
  transform: translateY(-100%);
}

.navbar2__container--scrolled {
  background-color: rgba(250, 250, 250, 0.8);
  backdrop-filter: blur(5px);
}

.navbar2__innercontainer {
  flex-grow: 1;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 2rem;
}

.navbar2_logo {
  width: 10rem;
}

.navbar2__linklist {
  flex-grow: 5;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 4rem;
  cursor: pointer;
  user-select: none;
}

.navbar2__link {
  font-family: inherit;
  font-size: 1rem;
  transition: all 0.2s;
  width: 100%;
  height: 100%;
}

.navbar2__link:hover,
.navbar2__link:active {
  color: #fc664e;
}

.navbar2__icongroup {
  flex-grow: 0;
  flex-shrink: 1;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: 2rem;
}

.navbar2__icongroup--grow {
  flex-grow: 1;
}

@keyframes slidein {
  from {
    width: 10%;
  }

  to {
    width: 100%;
  }
}

.navbar2__searchinput-container {
  position: relative;
  display: flex;
  width: 100%;
  animation: slidein 0.4s;
}

.navbar2__searchinput {
  width: 100%;
  outline: none;
  border-radius: 25px !important;
  padding: 0.5rem 3rem !important;
  border-width: 2px !important;
  border-color: rgb(228, 227, 227) !important;
  background-color: rgba(250, 250, 250, 0.6) !important;
}

.active {
  color: #fc664e;
}

.navbar2__searchinput:focus {
  border-color: #fc664e !important;
  border-width: 2px;
  box-shadow: 0;
  outline: none;
  --tw-ring-color: none;
}

.navbar2__icon--searchinput {
  position: absolute;
  left: 1rem;
  top: 6.8px;
  width: 16px;
  cursor: pointer;
}
.navbar2__icon--searchinputleft {
  position: absolute;
  right: 1rem;
  top: 12px;
  width: 16px;
  cursor: pointer;
  color: rgb(228, 227, 227);
}

.navbar2__icon {
  flex-shrink: 0;
  cursor: pointer;
  width: 20px;
  height: 20px;
}

.navbar2__icon:hover,
.navbar2__icon:active {
  fill: #fc664e;
}

.navbar2sub__container {
  position: absolute;
  z-index: 200;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  background-color: rgba(250, 250, 250, 0.9);
  backdrop-filter: blur(8px);
  padding: 1rem 0;
  transition: all 0.3s;
}

.navbar2sub__container--shown {
  transform: translateY(117%);
}

.navbar2sub__innercontainer {
  flex-grow: 1;
  max-width: 1024px;
}

.navbar2sub__linklist {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 2rem;
}

.navbar2sub__link {
  flex-grow: 1;
  font-size: 0.85rem;
  transition: all 0.15s;
}

.navbar2sub__link:hover,
.navbar2sub__link:active {
  color: #fc664e;
}

